ak1pro/apps/base/envoy-iap/envoy.yaml
admin:
static_resources:
  listeners:
    - name: main
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_routes
                  # request_headers_to_add:
                  #   - header:
                  #       key: ""
                  #       value: ""
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: backend
                http_filters:
                  - name: envoy.filters.http.oauth2
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
                      config:
                        token_endpoint:
                          cluster: oauth
                          uri: https://login.microsoftonline.com/55fdfc12-5447-45bc-9836-71c8bdd2105b/oauth2/v2.0/token
                          timeout: 3s
                        authorization_endpoint: https://login.microsoftonline.com/55fdfc12-5447-45bc-9836-71c8bdd2105b/oauth2/v2.0/authorize
                        redirect_uri: "%REQ(x-forwarded-proto)%://%REQ(:authority)%/callback"
                        redirect_path_matcher:
                          path:
                            exact: /callback
                        signout_path:
                          path:
                            exact: /signout
                        credentials:
                          client_id: 5abcc8e8-0de0-4306-9e0e-0f15ffd69dcb
                          token_secret:
                            name: token
                            sds_config:
                              path: "/etc/envoy/token-secret.yaml"
                          hmac_secret:
                            name: hmac
                            sds_config:
                              path: "/etc/envoy/hmac-secret.yaml"
                        # (Optional): defaults to 'user' scope if not provided
                        forward_bearer_token: true
                        auth_scopes:
                          - openid
                          - email
                        # # (Optional): set resource parameter for Authorization request
                        # resources:
                        #   - oauth2-resource
                        #   - http://example.com

                  # - name: envoy.filters.http.jwt_authn
                  #   typed_config:
                  #     "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                  #     providers:
                  #       login_microsoftonline_com:
                  #         issuer: https://login.microsoftonline.com/55fdfc12-5447-45bc-9836-71c8bdd2105b/v2.0
                  #         audiences:
                  #           - 00000003-0000-0000-c000-000000000000
                  #         remote_jwks:
                  #           # https://login.microsoftonline.com/55fdfc12-5447-45bc-9836-71c8bdd2105b/v2.0/.well-known/openid-configuration
                  #           http_uri:
                  #             uri: https://login.microsoftonline.com/55fdfc12-5447-45bc-9836-71c8bdd2105b/discovery/v2.0/keys
                  #             cluster: oauth
                  #             timeout: 5s
                  #           cache_duration:
                  #             seconds: 3000
                  #         forward: true
                  #     rules:
                  #       - match:
                  #           prefix: /
                  #         requires:
                  #           provider_name: login_microsoftonline_com

                  - name: envoy.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: backend
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 0.0.0.0
                      port_value: 80
    - name: oauth
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: oauth
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: "login.microsoftonline.com"
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: "login.microsoftonline.com"
